测试完成微信çappid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port =8888
+
+###==============Î¢ÐÅ===========
+#Ð¡³ÌÐò
+WX.appid = wx6bfd8515ae5ce6c4
+WX.app_sercet = a3219d7c77d8d6b8be4bcf6d2eff26c8
