--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,17 @@ server.port =8888
 #小程序
 WX.appid = wx6bfd8515ae5ce6c4
 WX.app_sercet = a3219d7c77d8d6b8be4bcf6d2eff26c8
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/cesuo?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+#默认的数据源 （com.zaxxer.hikari.HikariDataSource）
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+#设置mybatis识别下划线到驼峰标识
+#mbatis.comfiguration.mapUnderscoreToCamelCase=true
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#增加打印sql语句，一般用于本地开发测试
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
